# LiraOS

./: .dockerignore  .gitattributes  .gitignore  App.tsx  DASHBOARD_INTEGRATION.md  DEPLOY_GUIDE.md  DEPLOY_NOW.md  DIAGNOSIS.md  DISCORD_RPC_GUIDE.md  Dockerfile  GAMIFICATION_FIX_SUMMARY.md  LAP_IMPLEMENTATION.md  LAP_PLANNING_FIX.md  RAILWAY_VERIFICATION.md  README.md  TRAE_MODE_COMPLETE.md  TRAE_MODE_FRONTEND_COMPLETE.md  TRAE_MODE_IMPLEMENTATION_PLAN.md  TROUBLESHOOTING.md  constants.ts  du.cjs  du_backend.cjs  du_backend.txt  du_chat.cjs  du_chat_sorted.cjs  du_public.cjs  du_public.txt  index.html  metadata.json  nixpacks.toml  nuke_trash.cjs  organize_lira.bat  package-lock.json  package.json  railway.json  test-tts-gringo.js  test-tts-v2.js  test-tts-v3.js  test-tts.js  types.ts  (+1 more)
.github/: FUNDING.yml
Chat/: .env.example  App.tsx  CREDITS.md  DEPLOY_COMMANDS.txt  DESKTOP_INTEGRATION_EXAMPLE.tsx  Dockerfile  LIRA_DESKTOP_GUIDE.md  README.md  TIERS_AND_PERMISSIONS.md  abrir_minecraft.bat  build_debug.txt  build_log.txt  clean_ports.cjs  constants.ts  convert_installer_images.py  convert_nsis_images.py  dashboard.html  debug_ls.cjs  debug_ls.js  debug_smtp.cjs  deploy.ps1  deploy.sh  fix_textures.py  i18n.ts  images.d.ts  implementation_plan.md  index.css  index.html  index.tsx  lap.html  lira-link.js  list_models.cjs  metadata.json  (+13 more)
Chat/src-tauri/: Cargo.toml  tauri.conf.json
Chat/src-tauri/.cargo/: config.toml
Chat/src-tauri/capabilities/: default.json
Chat/src-tauri/icons/: icon.icns
Chat/src-tauri/src/: main.rs
Chat/src-tauri/wix/: main.wxs
(+680 files in other folders)
